--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -12,6 +12,7 @@
   width: auto;
   align-self: flex-start;
   align-items: center;
+  justify-content: center;
 }
 
 .btn-icon {
@@ -35,10 +36,14 @@
   transform: scale(0.97);
 }
 
-.btn.p-1 {
+.p-1 {
   padding: 0.5rem;
 }
-.btn.px-3 {
+.px-3 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.w-140 {
+  width: 160px;
 }
