--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -17,6 +17,123 @@
   scroll-margin-top: 100px;
 }
 
-.container.bg-transparent{
+.container.bg-transparent {
   background-color: transparent;
+}
+
+@media (max-width: 1200px) {
+  .content.filter-buttons {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media (max-width: 1000px) {
+  .container {
+    padding: 1.5rem;
+  }
+  .header__nav-list {
+    gap: 0;
+  }
+  .content.banner-buttons {
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .banner__img {
+    width: 40%;
+  }
+}
+
+@media (max-width: 780px) {
+  * {
+    font-size: 15px;
+  }
+
+  .container {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .px-3 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .header__nav-list {
+    display: none;
+  }
+
+  .header__logo {
+    width: 60px;
+  }
+
+  .banner {
+    flex-direction: column;
+  }
+
+  .banner__text {
+    width: 95%;
+  }
+
+  .banner__img {
+    order: -1;
+    width: 60%;
+    margin: 1rem 0;
+  }
+
+  .skills__list-item {
+    width: 45%;
+  }
+
+  .img-skill {
+    width: 110px;
+    height: 110px;
+  }
+
+  .education {
+    padding: 0 2rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .education-section {
+    width: 50%;
+  }
+
+  .education-list {
+    margin: 1rem 0;
+    justify-content: center;
+  }
+
+  .proyects {
+    padding: 1rem;
+  }
+
+  .proyect-card {
+    margin: 1.5rem 0;
+    width: 100%;
+  }
+
+  .proyect-buttons {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 580px) {
+  .education-section {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .education {
+    padding: 0 1rem;
+  }
+
+  .footer {
+    flex-wrap: wrap;
+    justify-content: center !important;
+    gap: 1rem;
+  }
 }
