--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -49,6 +49,12 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 0;
+  margin: 1rem 0;
+}
+
+.img-skill {
+  width: 80px;
+  height: 80px;
 }
 
 .skills__list-item {
@@ -85,6 +91,7 @@
 }
 
 .education-section {
+
   width: 40%;
 }
 
@@ -138,7 +145,7 @@
   padding: 1rem;
 }
 
-.content-buttons {
+.filter-buttons {
   justify-content: center;
 }
 
@@ -189,18 +196,4 @@
 .proyect-buttons {
   display: flex;
   gap: 1rem;
-}
-
-@media (max-width: 768px) {
-  .container {
-    width: 95%;
-    padding: 15px;
-  }
-}
-
-@media (max-width: 480px) {
-  .container {
-    width: 100%;
-    padding: 10px;
-  }
 }
